# python-nostr

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pip_release.yaml  test.yml
bot/: connect_relays.py  generateKey.py  get_events.py  publish_event.py
nostr/: cli.py  delegation.py  event.py  exceptions.py  filter.py  key.py  message_pool.py  message_type.py  pow.py  relay.py  relay_manager.py  request.py  secp.py  subscription.py
nostr/client/: client.py
test/: README.md  requirements.txt  test_event.py  test_filter.py  test_key.py  test_pow.py  test_relay_manager.py  test_subscription.py
