[tool.poetry]
name = "nostr"
version = "0.0.1"
description="A Python library for making Nostr clients."
authors = ["Jeff Thibault <jdthibault2@gmail.com>", "dni <office@dnilabs.com>"]
license = "MIT"
readme = "README.md"
repository='https://github.com/jeffthibault/python-nostr'

[tool.poetry.dependencies]
python = "^3.10 | ^3.9"
websocket-client = "^1.4.2"
secp256k1 = "^0.14.0"
cryptography = "^38.0.4"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.12.0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
nostr = "nostr.cli:main"
